<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/set_your_language"
        >
        <ListPreference
            android:title="@string/language"
            android:defaultValue="@string/language_english_value"
            android:key="@string/language_preference"
            android:entries="@array/Language"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_language_black_24dp"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/discover_peers_detail"
        >
        <SwitchPreference
            android:title="@string/turn_wifi_on_off"
            android:key="@string/wifi_key"
            android:icon="@drawable/ic_wifi_black_24dp"
            android:defaultValue="false"
            android:summary="@string/wifi_summary"
            android:summaryOn="@string/wifi_summary_on"
            android:summaryOff="@string/wifi_summary_off"
            />
        <CheckBoxPreference
            android:title="@string/discover_peers"
            android:key="@string/discover_peers_key"
            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:defaultValue="false"
            android:summary="@string/discover_summary"
            android:summaryOff="@string/discover_summary_off"
            android:summaryOn="@string/discover_summary_on"
            />
    </PreferenceCategory>
</PreferenceScreen>